Updated text and added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta name="portfolio" content="Portfolio Yudish Juwaheer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/notion_avatar_transparent.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yudish.me/">
+    <meta property="og:title" content="Yudish Juwaheer - Portfolio">
+    <meta property="og:description" content="Check out my portfolio to see some of my latest works.">
+    <meta property="og:image" content="avatar_meta.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yudish.me/">
+    <meta property="twitter:title" content="Yudish Juwaheer - Portfolio">
+    <meta property="twitter:description" content="Check out my portfolio to see some of my latest works.">
+    <meta property="twitter:image" content="avatar_meta.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
