Updated preview image

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://yudish.me/">
     <meta property="twitter:title" content="Yudish Juwaheer - Portfolio">
     <meta property="twitter:description" content="Check out my portfolio to see some of my latest works.">
-    <meta property="twitter:image" content="avatar_meta.png">
+    <meta property="twitter:image" content="portfolio_preview.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
