--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://yudish.me/">
     <meta property="og:title" content="Yudish Juwaheer - Portfolio">
     <meta property="og:description" content="Check out my portfolio to see some of my latest works.">
-    <meta property="og:image" content="avatar_meta.png">
+    <meta property="og:image" content="portfolio_preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yudish.me/">
     <meta property="twitter:title" content="Yudish Juwaheer - Portfolio">
     <meta property="twitter:description" content="Check out my portfolio to see some of my latest works.">
-    <meta property="twitter:image" content="portfolio_preview.png">
+    <meta property="twitter:image" content="portfolio_preview.jpg">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
