Updated preview path

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yudish.me/">
+    <meta property="og:url" content="https://www.yudish.me/">
     <meta property="og:title" content="Yudish Juwaheer - Portfolio">
     <meta property="og:description" content="Check out my portfolio to see some of my latest works.">
     <meta property="og:image" content="portfolio_preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yudish.me/">
+    <meta property="twitter:url" content="https://www.yudish.me/">
     <meta property="twitter:title" content="Yudish Juwaheer - Portfolio">
     <meta property="twitter:description" content="Check out my portfolio to see some of my latest works.">
     <meta property="twitter:image" content="portfolio_preview.jpg">
